Se calibrarón algunos detalles en el algoritmo